@@ -232,6 +232,8 @@ FocusToEWin(EWin * ewin)
      {
 	if (!mode.cur_menu_mode)
 	   mode.context_ewin = ewin;
+	if (mode.kde_support)
+	   KDE_UpdateFocusedWindow();
 	EDBUG_RETURN_;
      }
    /* Never focus a window that's not on the current desktop.  That's just dumb. -- mej */
@@ -247,6 +249,8 @@ FocusToEWin(EWin * ewin)
 	  }
 	if (!mode.cur_menu_mode)
 	   mode.context_ewin = ewin;
+	if (mode.kde_support)
+	   KDE_UpdateFocusedWindow();
 	EDBUG_RETURN_;
      }
    mode.windowdestroy = 0;
@@ -271,6 +275,8 @@ FocusToEWin(EWin * ewin)
 	mode.focuswin = NULL;
 	mode.realfocuswin = NULL;
 	mode.context_ewin = NULL;
+	if (mode.kde_support)
+	   KDE_UpdateFocusedWindow();
 	EDBUG_RETURN_;
      }
    else if (!ewin->menu)
@@ -326,6 +332,8 @@ FocusToEWin(EWin * ewin)
    if (mode.focuswin)
       DoIn("REVERSE_FOCUS_TIMEOUT", 0.5, ReverseTimeout,
 	   mode.focuswin->client.win, NULL);
+   if (mode.kde_support)
+      KDE_UpdateFocusedWindow();
    EDBUG_RETURN_;
 }
 
