@@ -1855,3 +1855,11 @@ Thu Sep 16 15:14:09 PDT 1999
 (Raster)
 
 play sounds for desktoop changing better :)
+
+-------------------------------------------------------------------------------
+
+Thu Sep 16 16:23:20 PDT 1999
+(Mandrake)
+
+taskbar now should update when you change focus.  next on to setting and
+updating all the names.
